# SolarSystem

./: CMakeLists.txt  README.md
headers/: Solar.hpp  Stars.hpp
src/: Solar.cpp  Stars.cpp  main.cpp
